@@ -37,7 +37,6 @@ import org.fenixedu.academic.domain.StudentCurricularPlan;
 import org.fenixedu.academic.domain.student.Registration;
 import org.fenixedu.academic.domain.student.Student;
 import org.fenixedu.academic.domain.student.registrationStates.RegistrationState;
-import org.fenixedu.ulisboa.specifications.domain.student.ActiveStudentOverride;
 import org.joda.time.DateTime;
 import org.joda.time.LocalDate;
 
@@ -49,12 +48,6 @@ public class StudentActive {
         boolean activeRegistrationCreatedInFuture = false;
         boolean isFirstYearFirstTime = false;
 //        boolean isOtherKindOfCandidate = false;
-
-        // Handling the override list, more info about what his hack is can be read in the 
-        // comments of ActiveStudentOverride class
-        if (student != null && student.getPerson() != null && ActiveStudentOverride.isOverrideAvailablefor(student.getPerson())) {
-            return true;
-        }
 
         if (student != null) {
             Predicate<? super Registration> registrationHasEnrolmentsInLast2Years = registration -> hasAnyEnrolment(registration);
