@@ -1,3 +1,5 @@
+- Refactor: Remove ActiveStudentOverride references [#qubIT-Fenix-6491]
+
 7.25.2 (18-02-2026)
 - Refactor: Updates references to deprecated MobilityRegistrationInformation methods [#qubIT-Fenix-7989]
 
